# mailgun-template-migration

./: LICENSE  README.md  mailgun-template-migration.py  pyproject.toml
.github/workflows/: codeql.yml  release.yml
models/: Flags.py  TemplateModel.py
