[tool.poetry]
name = "mailgun-template-migration"
version = "0.1.0"
description = ""
authors = ["shlomieyaniv <shlomie@apono.io>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
loguru = "^0.6.0"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
